--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
             <img src="../images/me.jpeg" class="me">
                 </div>
          <div class="info">
-             <p> This is the about me Section. I will write whatever I want in here until I am ready to code it properly.</p>
+             <p> I am a U.C. Berkeley graduate who discovered UX research and UX design while working at TiVo. The research team there took me under their wing and allowed me to work on mulitple projects with them including focus groups, usability tests, and user interviews. I decided that this work was what I truly liked and so I began my plunge into the world of UX.</p>
                 </div>
 </section>
 <section class="lists">
