--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <section>
     <div class="top">
         <div class ="name" > 
-            <h1>Kevin Lugo</h1>
+            <p>Kevin Lugo</p>
         </div>
-        <div class="nav" text-align= "right">
+        <div class="nav">
                 <a href="https://www.google.com" class="am">About me</a>
                 <a class="pr">Projects</a>
                 <a class="re">Resume</a>
